comit menu cambiado

--- a/estilos.css
+++ b/estilos.css
@@ -1,5 +1,5 @@
 #body {
-	background-image: url(imagenes/imagenv.png);
+	background-image: url(imagenes/v.jpg);
 	background-size: 100%;
 	background-attachment: fixed;
 	background-repeat: no-repeat;
